styles.css
body {
  font-family: 'Open Sans', sans-serif;
  padding-top: 100px;
  background: #e81f1f;
}

h1 {
  font-weight: 700;
  font-size: 5em;
  color: #fff;
}

a {
  color: #e81f1f;
  text-decoration: underline;
}

p {
  font-size: 24px;
  line-height: 1.5;
  color: #000;
  font-weight: 300;
  margin: 0 0 15px;
}

.navbar-toggle .icon-bar {
  background: #e81f1f;
  display: block;
  width: 30px;
  height: 4px;
  border-radius: 1px;
}

#logo {
  width: 423px;
  height: 40px;
}

.navbar {
  min-height: 100px;
  box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.18);
}

.navbar-fixed-top {
  background: #fff;
}

.navbar-fixed-top .navbar-brand {
  padding: 33px 15px;
}

.navbar-fixed-top .nav {
  padding: 25px 0;
}

.nav li a {
  font-size: 1.15em;
  color: black;
  text-transform: uppercase;
  text-decoration: none;
}
.nav li a:hover {
  background: none;
  color: #e81f1f;
  cursor: pointer;
}
.sliding-middle-out {
  display: inline-block;
  position: relative;
  padding-bottom: 5px;
}
.sliding-middle-out:after {
  content: '';
  display: block;
  margin: auto;
  height: 3px;
  width: 0px;
  background: transparent;
  transition: width .5s ease, background-color .5s ease;
}
.sliding-middle-out:hover:after {
  width: 100%;
  background: #e81f1f;
}

/*nav icon hamburger menu animation*/
#nav-icon {
  width: 44px;
  height: 44px;
  position: relative;
  margin: 0px auto;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
}

#nav-icon span {
display: block;
position: absolute;
height: 6px;
width: 100%;
background: #e81f1f;
border-radius: 9px;
opacity: 1;
left: 0;
-webkit-transform: rotate(0deg);
-moz-transform: rotate(0deg);
-o-transform: rotate(0deg);
transform: rotate(0deg);
-webkit-transition: .25s ease-in-out;
-moz-transition: .25s ease-in-out;
-o-transition: .25s ease-in-out;
transition: .25s ease-in-out;
}

#nav-icon span:nth-child(1) {
top: 5px;
}

#nav-icon span:nth-child(2) {
top: 19px;
}

#nav-icon span:nth-child(3) {
top: 33px;
}

#nav-icon.open span:nth-child(1) {
top: 18px;
-webkit-transform: rotate(135deg);
-moz-transform: rotate(135deg);
-o-transform: rotate(135deg);
transform: rotate(135deg);
}

#nav-icon.open span:nth-child(2) {
opacity: 0;
left: -60px;
}

#nav-icon.open span:nth-child(3) {
top: 18px;
-webkit-transform: rotate(-135deg);
-moz-transform: rotate(-135deg);
-o-transform: rotate(-135deg);
transform: rotate(-135deg);
}

#work-link {
  background: #e81f1f;
  color: #ffffff;
  border-radius: 8px;
  margin-left: 10px;
}
#work-link:hover {
  background: #000;
}
.jumbotron h1 {
  font-weight: 700;
  color: #ffffff;
  font-size: 5em;
  margin-bottom: 20px;
}
.jumbotron p {
  font-weight: 300;
  font-size: 24px;
  color: #ffffff;
  margin-bottom: 30px;
}
.jumbotron {
  background: #e81f1f;
  align-items: center;
  background: url('./assets/img/JHD-collage.png') no-repeat bottom right; /* FF3.6-15 */
  background-size: contain;
  display: -webkit-flex;
  display: flex;
  height: 800px;
  width: 100%;
  margin-bottom: 0px;
}
.jumbotron .btn {
  color: #e81f1f;
  background: #fff;
  border-radius: 8px;
  text-transform: uppercase;
  font-size: 22px;
  padding: 10px;
  font-weight: 700;
  background-image: url('./assets/img/EYE.svg');
  background-position: 10px 12px !important;
  background-size: 30px 30px;
  background-repeat: no-repeat;
  padding-left: 50px;
  box-shadow:rgba(0, 0, 0, 0.2) 0 16px 16px 0;
  -webkit-box-shadow:rgba(0, 0, 0, 0.2) 0 16px 16px 0;
  -moz-box-shadow:rgba(0, 0, 0, 0.2) 0 16px 16px 0;
}

.jumbotron .btn:hover {
  box-shadow:rgba(0, 0, 0, 0.2) 0 8px 8px 0;
  -webkit-box-shadow:rgba(0, 0, 0, 0.2) 0 8px 8px 0;
  -moz-box-shadow:rgba(0, 0, 0, 0.2) 0 8px 8px 0;
  opacity: 0.9;
}

.content-copy {
  text-align: left;
  top: -90px;
}

.office-image {
  width: 100%;
}

/*about us page styles*/
.red.container {
  width: 100%;
  padding: 0;
}
.about-us p {
  color: #fff;
}
.about-us .intro {
  margin-bottom: 50px;
}

.about-us .bio {
  background: #000;
  padding: 20px 30px;
}
.side-img {
  padding: 0px;
}

.jeff-photo {
  width: 100%;
  max-width: 450px;
  margin: 0 auto;
}

/*Portfolio Page*/
.flex-row {
display: flex;
flex-wrap: wrap;
}
.flex-row > [class*='col-'] {
display: flex;
flex-direction: column;
}

.flex-row .thumbnail,
.flex-row .caption {
flex-direction: column;
display: flex;
flex: 1 0 auto;
height: auto;
position: relative;
}
.flex-text {
flex-grow: 1;
}
.flex-row img {
min-width: 0;
width: 100%;
}

.portfolio {
  padding: 50px 0 0px;
}
.portfolio p {
  color: #fff;
}
.portfolio .page-title {
  margin-bottom: 20px;
}
.portfolio-image {
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.portfolio-image:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  cursor: pointer;
}
.thumbnail {
  padding: 4px;
  margin-bottom: 20px;
  line-height: 1.42857143;
  background-color: transparent;
  border: none;
  border-radius: 0px;
}
.portfolio .row {
  margin-left: 0px;
  margin-right: 0px;
}
.card-title {
  color: #fff;
  font-size: 24px;
  text-transform: uppercase;
  font-weight: 400;
  text-align: center;
}
.card-title:hover {
  cursor: pointer;
}

.card {
  margin-bottom: 30px;
}

.brochures {
  background: #000;
  padding-bottom: 60px;
  padding-top: 35px;
  margin-top: 40px;
}

.brochures h3 {
  color: #fff;
  font-size: 30px;
  font-weight: 300;
  text-transform: uppercase;
  text-align: center;
}

.cover-images img {
  margin: 0 auto;
  border: 3px solid white;
  opacity: 1;
}
.cover-images img:hover {
  cursor: pointer;
}

.brochure-title {
  margin-bottom: 30px;
}

/*Contact Us Page*/
.contact-us h1 {
  font-size: 4.5em;
  margin-bottom: 50px;
}
.contact-us p {
  color: #fff;
}
.contact-us-area {
  background: #000;
  padding: 30px;
}

.contact-us-area p {
  font-size: 35px;
  line-height: 1.25;
}
.contact-us-area a {
  color: #fff;
}
.contact-us-area .office-address {
  margin-top: 50px;
}
.contact-us .office-image {
  display: inline-block;
  position: absolute;
  float: right;
  width: 413px;
  height: auto;
}


/*footer styles*/
.footer-tagline {
  color: #e81f1f;
  font-size: 50px;
  font-weight: 400;
  line-height: 1;
}

footer {
  background: #fff;
  padding: 30px 0;
}

footer .contact-details {
  font-size: 26px;
  margin-bottom: 30px;
}

#contact-links {
  font-size: 24px;
  font-weight: 300;
}

#address {
  font-size: 20px;
  font-weight: 300;
  text-transform: uppercase;
  margin-bottom: 30px;
}


/*Media Queries*/
/* Medium Devices, Desktops */
@media only screen and (max-width: 1190px) {
  .jumbotron {
    background: -moz-linear-gradient(to right, rgba(232,31,31,1) 0%, rgba(232,31,31,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* FF3.6-15 */
    background: -webkit-linear-gradient(to right, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/JHD-collage.png') no-repeat bottom right; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}

@media only screen and (max-width : 992px) {
  .content-copy {
    margin: auto;
    padding-bottom: 75px;
    text-align: center;
    width: 100%;
    top: 0px;
  }
  #logo {
    width: 350px;
    height: auto;
  }
  .jumbotron {
    height: auto;
    background: none;
  }
  .jumbotron {
    background: -moz-linear-gradient(bottom, rgba(232,31,31,1) 0%, rgba(232,31,31,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* FF3.6-15 */
    background: -webkit-linear-gradient(bottom, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to top, rgba(232,31,31,1) 0%,rgba(232,31,31,0) 100%), url('./assets/img/collage-mobile3.jpg') no-repeat bottom center; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  }
}

@media only screen and (max-width : 920px) {
    body {
      padding-top: 60px;
    }
    .navbar {
      min-height: 60px;
    }
    .navbar-fixed-top .nav {
      margin-top: 0px;
    }
    .navbar-fixed-top .navbar-brand {
      padding: 15px 15px;
    }
    .navbar-header {
      float: none;
    }
    .navbar-fixed-top .nav {
      background: #000;
    }
    .navbar-left,.navbar-right {
      float: none !important;
    }
    .navbar-toggle {
      display: block;
      position: relative;
      float: right;
      padding: 7px 0px;
      margin-top: 0px;
      margin-right: 0px;
      margin-bottom: 0px;
      background-color: transparent;
      background-image: none;
      border: 1px solid transparent;
      border-radius: 4px;
    }
    .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
  		top: 0;
  		border-width: 0px;
	  }
    .navbar-collapse.collapse {
      display: none!important;
    }
    .navbar-nav {
      float: none!important;
  		margin-top: 7.5px;
      text-align: center;
      font-size: 20px;
	  }
    .nav li a {
      color: #fff;
    }
	  .navbar-nav>li {
      float: none;
    }
    .navbar-nav>li>a {
      padding-top: 20px;
      padding-bottom: 20px;
    }
    .collapse.in{
  		display:block !important;
      background: #000;
      margin-left: -15px;
      margin-right: -15px;
  	}

    #work-link {
      display: inline-block;
      display: inline-block;
      margin-top: 10px;
      padding: 20px 80px;
      margin-left: 0px;
    }

    .navbar-fixed-top .nav {
      padding: 15px 0 30px;
    }
    .sliding-middle-out {
      display: inline-block;
      position: relative;
      padding-bottom: 5px;
    }
    .sliding-middle-out:after {
      content: '';
      display: block;
      margin: auto;
      height: 0px;
      width: 0px;
      background: transparent;
      transition: none;
    }
    .sliding-middle-out:hover:after {
      width: 100%;
      background: transparent;
    }
}

/* Small Devices, Tablets */
@media only screen and (max-width : 768px) {
  #work-link {
    width: 60%;
    margin-left: 0px;
  }
  .brochure-title h3 {
    font-size: 24px;
  }
  .navbar-toggle {
    margin-right: 15px;
  }
}



/* Extra Small Devices, Phones */
@media only screen and (max-width : 480px) {
  .jumbotron {
    background-position: 0px 300px;
  }
  .jumbotron h1 {
    font-size: 3em;
  }
  .jumbotron p {
    font-weight: 300;
    font-size: 20px;
    line-height: 1.5;
    color: #ffffff;

  }
  #logo {
    width: 275px;
    height: auto;
  }
  .navbar {
    min-height: 60px;
  }
  .navbar-fixed-top .navbar-brand {
    padding: 20px 15px;
  }
  .content {
    padding: 0 20px;
  }
  .content-copy {
    top: -35px;
  }
  body {
    padding-top: 60px;
  }
  h1 {
    font-size: 3em;
  }
  p {
    font-size: 18px;
  }

  .footer-tagline {
    font-size: 32px;
  }
  footer .contact-details {
    font-size: 20px;
  }
  footer #contact-links {
    font-size: 20px;
  }
  .container {
    padding-left: 0px;
    padding-right: 0px;
  }
  .about-us .bio {
    background: #000;
    padding: 20px;
  }

  .one-line {
   white-space: nowrap;
  }
  .card {
    margin-bottom: 30px;
  }
  .portfolio {
    padding: 20px 0;
  }
  .flex-row > [class*='col-'] {
			width: 50%;
	}
  .flex-row .col-md-4:nth-child(2n+1) {
    padding-right: 5px;
  }
  .flex-row .col-md-4:nth-child(2n) {
    padding-left: 5px;
  }
	.flex-row  {
    padding-left: 0px;
    padding-right: 0px;
  }
  #work-link {
    width: 90%;
    margin-left: 0px;
  }
  .card-title {
    font-size: 18px;
  }
  .contact-us-area p {
    font-size: 28px;
  }
}

